# stock_spy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  config.toml  earning_safeguard.md  idea.md  pyproject.toml  signal_config_example.toml  swing_config_example.toml
examples/: munich_re.py  walmart.py
notes/: dashboard.md  stagnation.md
signal_spy/: __init__.py  __main__.py  analysis.py  config.py  glossary.py  models.py  monitor.py  scheduler.py  scoring.py  store.py
signal_spy/providers/: __init__.py  fundamentals.py
spy_core/: __init__.py  models.py
spy_core/providers/: __init__.py  news.py
src/signal_spy/: report.py
src/spy_core/: config.py
src/swing_spy/: dashboard_candidates.py  position_pricing.py  scanner.py  scheduler.py  trade_lifecycle.py  trade_models.py  trade_store.py
stock_spy/: __init__.py  __main__.py  analysis.py  config.py  glossary.py  models.py  monitor.py  notify.py  report.py  scheduler.py  scoring.py  store.py
stock_spy/providers/: fundamentals.py  news.py  prices.py  technicals.py
swing_spy/: __init__.py  __main__.py  analysis.py  config.py  earnings.py  glossary.py  history.py  models.py  report.py  scanner.py  scheduler.py  setups.py  sizing.py  store.py  universe.py
tests/: test_analysis.py  test_glossary.py  test_monitor.py  test_notify.py  test_report.py  test_scoring.py  test_store.py
tests/fixtures/: yahoo_rss.xml
tests/providers/: test_fundamentals.py  test_news.py  test_prices.py  test_technicals.py
tests/signal_spy/: test_analysis.py  test_fundamentals.py  test_glossary.py  test_monitor.py  test_prices.py  test_report.py  test_scoring.py  test_store.py
tests/spy_core/: test_news.py  test_notify.py  test_technicals.py
tests/swing_spy/: test_dashboard_candidates.py  test_dashboard_scheduler.py  test_position_pricing.py  test_streamlit_app.py  test_streamlit_boundary.py  test_swing_analysis.py  test_swing_earnings.py  test_swing_history.py  test_swing_report.py  test_swing_scanner.py  (+6 more)
(+8 files in other folders)
