[project]
name = "spy-tools"
version = "0.1.0"
description = "Telegram alerting tools: portfolio signals (signal_spy) and a swing scanner (swing_spy)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "feedparser>=6.0.12",
    "pandas>=2.2.0",
    "pydantic-ai-slim[google]>=1.102.0",
    "pydantic-settings>=2.14.1",
    "yfinance>=1.4.0",
]

[project.scripts]
signal-spy = "signal_spy.__main__:main"
swing-spy = "swing_spy.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["spy_core", "signal_spy", "swing_spy"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ty.rules]
possibly-unresolved-reference = "error"
